feat(LikeController): added swagger documentation to LikeController
